--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@shopify/flash-list": "^1.6.3",
     "jotai": "^2.6.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-vector-icons": "^10.0.2"
