--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jotai": "^2.6.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-reanimated-carousel": "^3.5.1",
